--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,10 +4,10 @@ on:
   push:
     branches:
       - main
-    paths:
-      - main.tsp
-      - schema/**.tsp
-      - tspconfig.yaml
+    # paths:
+    #   - main.tsp
+    #   - schema/**.tsp
+    #   - tspconfig.yaml
 
 jobs:
   compile:
@@ -54,7 +54,7 @@ jobs:
       - name: Download openapi spec
         uses: actions/download-artifact@v4
         with:
-          name: ${{ env.SPEC_ARTIFACT }}
+          artifact-ids: ${{ env.SPEC_ARTIFACT }}
           path: spec
 
       - name: Setup openapi-generator-cli
