Fix artifact path

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -33,7 +33,6 @@ jobs:
         id: set
         uses: actions/upload-artifact@v4
         with:
-          name: openapi
           path: tsp-output/schema/openapi.yaml
 
   generate:
@@ -55,7 +54,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           artifact-ids: ${{ env.SPEC_ARTIFACT }}
-          path: spec
+          path: spec/tsp-output/schema/openapi.yaml
 
       - name: Setup openapi-generator-cli
         run: npm install @openapitools/openapi-generator-cli -g
