--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -54,11 +54,6 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           artifact-ids: ${{ env.SPEC_ARTIFACT }}
-          path: spec
-
-      - run: tree
-      - run: file spec/artifact
-      - run: file spec/openapi.yaml
 
       - name: Setup openapi-generator-cli
         run: npm install @openapitools/openapi-generator-cli -g
@@ -66,7 +61,7 @@ jobs:
       - name: Generate entrypoint
         run: |
           openapi-generator-cli generate \
-            -i spec/openapi.yaml \
+            -i artifact/openapi.yaml \
             -g spring \
             -o ${GEN_DEST} \
             --additional-properties=delegatePattern=true,skipOverwrite=true
