--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,10 +4,10 @@ on:
   push:
     branches:
       - main
-    # paths:
-    #   - main.tsp
-    #   - schema/**.tsp
-    #   - tspconfig.yaml
+    paths:
+      - main.tsp
+      - schema/**.tsp
+      - tspconfig.yaml
 
 jobs:
   compile:
