--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -65,18 +65,8 @@ jobs:
             -i artifact/openapi.yaml \
             -g spring \
             -o backend \
-            --global-property=apis,models,supportingFiles=true\
-            --additional-properties=skipOverwrite=true,\
-              basePackage=dev.ryone.trdst.infrastructure.web.entrypoint,\
-              apiPackage=dev.ryone.trdst.infrastructure.web.entrypoint.controller,\
-              modelPackage=dev.ryone.trdst.infrastructure.web.entrypoint.model,\
-              interfaceOnly=false,\
-              apiDocs=false,\
-              apiTests=false,\
-              modelDocs=false,\
-              modelTests=false,\
-              useSpringBoot3=true,\
-              generateBuilders=true
+            --global-property=apis,models,supportingFiles=true \
+            --additional-properties=skipOverwrite=true,basePackage=dev.ryone.trdst.infrastructure.web.entrypoint,apiPackage=dev.ryone.trdst.infrastructure.web.entrypoint.controller,modelPackage=dev.ryone.trdst.infrastructure.web.entrypoint.model,interfaceOnly=false,apiDocs=false,apiTests=false,modelDocs=false,modelTests=false,useSpringBoot3=true,generateBuilders=true
 
       - name: Commit & Push
         run: |
